<resources>
    <string name="app_name">Shop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopcar_title">购物车</string>
    <string name="shopcar_goto_shop">去结算</string>
    <string name="price">￥%s</string>
    <string name="good_count">x %d</string>
    <string name="all_order_txt">全部订单</string>
    <string name="all_order_see_txt">查看全部订单</string>
    <string name="daifukuan_txt">待付款</string>
    <string name="daifahuo_txt">待发货</string>
    <string name="daishouhuo_txt">待收货</string>
    <string name="daipingjia_txt">待评价</string>
    <string name="tuihuanhuo_txt">退款/售后</string>
    <string name="all_money_txt">我的资产</string>
    <string name="all_money_see_txt">查看全部资产</string>
    <string name="gouwuquan_txt">购物券</string>
    <string name="youhuiquan_txt">优惠券</string>
    <string name="jifen_txt">积分</string>
    <string name="hongbao_txt">红包</string>
    <string name="setting_txt">设置</string>
    <string name="setting_address_txt">收获地址管理</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="success">交易成功</string>
    <string name="my_point">我的积分</string>
    <string name="point_rule">积分规则</string>
    <string name="tuikuan_price">退款金额</string>
    <string name="tuikuan_time">退款时间</string>
    <string name="tuikuan_busness">店铺名称</string>
    <string name="tuikuan_leixing">退款类型</string>
    <string name="tuikuan_money">退款金额</string>
    <string name="tuikuan_reason">退款原因</string>
    <string name="tuikuan_function">退款说明</string>
    <string name="tuikuan_num">退款编号</string>
    <string name="apply_time">申请时间</string>
    <string name="tuikuan_direction">查看钱款去向</string>
    <string name="need_help">需要帮助</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="hint_signin_user">请输入手机号</string>
</resources>
