<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.deepblue.shop.Business.Fragment.Personal.PersonFragment">


    <RelativeLayout
        android:id="@+id/title_myself"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/home_page_title_color">
       <ImageView
           android:id="@+id/user_image"
           android:layout_marginTop="@dimen/user_image_top"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@mipmap/head"
           android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户名"
            android:textSize="17sp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:textColor="@color/bg_color"
            android:layout_below="@id/user_image"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:id="@+id/my_sms_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sms_my"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/title_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/cardview_dark_background"
            android:alpha="0.3"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/shoucang_goods_lin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="vertical">
                <TextView
                    android:id="@+id/shoucang_num_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_weight="1"
                    android:textColor="@color/bg_color"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="商品收藏"
                    android:textColor="@color/bg_color"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/shoucang_buess_lin"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/shoucang_num_buess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_weight="1"
                    android:textColor="@color/bg_color"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="店铺收藏"
                    android:textColor="@color/bg_color"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/my_zuji"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/shoucang_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/bg_color"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的足迹"
                    android:textColor="@color/bg_color"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <!--<include layout="@layout/myself_title_item"></include>-->

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/all_order_lin"
        android:layout_below="@id/title_myself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/margin_10dp"
        >
        <TextView
            android:id="@+id/order_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_order_txt"
            />
        <ImageView
            android:id="@+id/order_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/order_two"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_toLeftOf="@id/order_three"
            android:textColor="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order_see_txt"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/line"
        android:layout_below="@id/all_order_lin"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:alpha="0.4"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:id="@+id/my_order_item"
        android:layout_below="@id/line"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/daifukuan_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/daifukuan_txt" />
        <TextView
            android:id="@+id/daifahuo_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/daifahuo_txt" />
        <TextView
            android:id="@+id/daishouhuo_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/daishouhuo_txt" />
        <TextView
            android:id="@+id/daipingjia_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/daipingjia_txt" />
        <TextView
            android:id="@+id/tuihuanhuo_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/tuihuanhuo_txt" />
    </LinearLayout>

    <TextView
        android:id="@+id/background"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/my_order_item"
        android:layout_width="match_parent"
        android:alpha="0.1"
        android:layout_height="@dimen/margin_10dp" />
    <RelativeLayout
        android:id="@+id/all_money_lin"
        android:layout_below="@id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        >
        <TextView
            android:id="@+id/money_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_money_txt"
            />
        <ImageView
            android:id="@+id/money_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/moneyr_two"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_toLeftOf="@id/money_three"
            android:textColor="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_money_see_txt"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/line_two"
        android:layout_below="@id/all_money_lin"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:alpha="0.4"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:id="@+id/my_money_item"
        android:layout_below="@id/line_two"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gouwuquan_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/gouwuquan_txt" />
        <TextView
            android:id="@+id/youhuiquan_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/youhuiquan_txt" />
        <TextView
            android:id="@+id/jifen_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/jifen_txt" />
        <TextView
            android:id="@+id/hongbao_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/layout_selector"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/hongbao_txt" />

    </LinearLayout>

    <TextView
        android:id="@+id/background_two"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/my_money_item"
        android:layout_width="match_parent"
        android:alpha="0.1"
        android:layout_height="@dimen/margin_10dp" />
    <RelativeLayout
        android:id="@+id/all_setting_lin"
        android:layout_below="@id/background_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        >
        <TextView
            android:id="@+id/setting_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/setting_txt"
            />
        <ImageView
            android:id="@+id/setting_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/setting_two"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_toLeftOf="@id/setting_three"
            android:textColor="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_address_txt"/>
    </RelativeLayout>
</RelativeLayout>
